...
                        title: "Total Children",
                        value: childState.isLoading ? "..." : childState.summary.totalChildren.toString(),
                        icon: Icons.people_alt_rounded,
                      ),
                      _buildTappableDashboardCard(
                        onTap: () => context.pushNamed('modulesDetails'),
                        title: "Modules Uploaded",
                        value: moduleState.isLoading ? "..." : moduleState.stats.totalCount.toString(),
                        icon: Icons.folder_copy_rounded,
                      ),
                      _buildTappableDashboardCard(
                        onTap: () => context.pushNamed('activeChallengesDetails'),
                        title: "Active Challenges",
...
    return Padding(
      padding: EdgeInsets.symmetric(horizontal: 5.w),
      child: Row(
        mainAxisAlignment: MainAxisAlignment.spaceBetween,
        children: [
          Text(
            "Admin Panel",
            style: GoogleFonts.poppins(
              fontSize: 21.sp,
              fontWeight: FontWeight.w800,
              color: Colors.white,
            ),
          ),
...
